# url-shortener

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.loadtest-sut.yml  docker-compose.loadtest.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fetch-geoip.sh  init-letsencrypt.sh  test_real.py
.github/workflows/: ci-cd.yml  code-check.yml
backend/shortener/: .dockerignore  .env.example  Dockerfile  Makefile  go.mod  go.sum
backend/shortener/data/: .gitkeep
backend/shortener/migrations/: 000001_init.up.sql  000003_add_custom_alias.down.sql  000003_add_custom_alias.up.sql  000004_add_link_active.up.sql
clickhouse/: analyst-user.xml  default-user.xml  init.sql
clickhouse-consumer/: .dockerignore  .env.example  .golangci.yml  Dockerfile  Makefile  go.mod  go.sum
clickhouse-consumer/cmd/consumer/: loop_test.go  main.go
clickhouse-consumer/internal/config/: config.go
clickhouse-consumer/internal/consumer/: kafka_consumer.go  kafka_consumer_test.go
clickhouse-consumer/internal/parser/: useragent.go  (+1 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  setupTests.js
kafka/: create-topics.sh
loadtest/: .env.loadtest.example  .gitignore  README.md  benchmark.py  common.py  showcase.py
loadtest/orchestrate/: failure-injection.ps1  stats-poll.ps1
nginx/: nginx.conf  nginx.prod.conf
prometheus/: prometheus.yml
python-agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
python-agent/app/: config.py  main.py
python-agent/app/agent/: gemini_client.py  prompt.py  sql_validator.py
python-agent/app/auth/: jwt.py
python-agent/app/db/: clickhouse.py  redis_client.py
python-agent/app/models/: schemas.py
python-agent/evaluation/: benchmark.json  run_eval.py
python-agent/tests/: conftest.py  test_api.py  test_gemini_client.py  test_jwt_auth.py  test_sql_validator.py
python-agent/tests/integration/: conftest.py  test_clickhouse_isolation.py  test_redis_denylist.py
redis/: redis.conf
scripts/: fetch-geoip.sh  init-letsencrypt.sh  run-loadtests.sh
terraform/: cloud-init-loadgen.yml  cloud-init.yml  main.tf  outputs.tf  variables.tf
(+93 files in other folders)
