[project]
name = "python-agent"
version = "0.1.0"
description = "AI analytics agent (NL → SQL via Gemini) for the URL shortener."
requires-python = ">=3.12"
# Runtime dependencies (installed into the production image).
# Versions are pinned to the exact set the service was tested against.
dependencies = [
    "setuptools==70.0.0",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "google-generativeai==0.8.0",
    "clickhouse-connect==0.7.19",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "PyJWT==2.9.0",
    "redis==5.0.8",
    "httpx==0.27.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-exporter-otlp-proto-http==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "prometheus-client==0.20.0",
]

# Dev/test-only dependencies (PEP 735 group). Excluded from the production
# image via `uv sync --no-dev`. pytest-cov reports unit-test coverage.
[dependency-groups]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[tool.uv]
# The agent is run as `uvicorn app.main:app`, not installed as a package,
# so treat this as a non-packaged (virtual) project — uv only resolves and
# installs the dependencies above, it doesn't try to build `app/`.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run = the fast unit pass: integration tests (which need the real
# ClickHouse/Redis from docker-compose.test.yml) are excluded via
# `-m "not integration"` and opted into explicitly by `make test-integration-agent`
# (`pytest tests/integration -m integration`). Every run also prints `app`
# coverage. asyncio_mode=auto lets the async denylist tests run without a
# per-test marker.
addopts = "--cov=app --cov-report=term-missing -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: L1 integration tests against real ClickHouse/Redis (docker-compose.test.yml); excluded from the default run.",
    "gemini: E2E tests that make real Gemini API calls (Phase 4); opt in with --gemini.",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
